<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding= "20sp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/photoid" />

            <ImageView
                android:id="@+id/ListImage"
                android:layout_width="146dp"
                android:layout_height="189dp"
                android:layout_gravity="center"
                android:layout_marginEnd="18dp"
                android:padding="4dp"
                android:src="@mipmap/ic_launcher_round" />

            <RadioGroup
                android:id="@+id/rbg"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="155dp"
                android:layout_marginEnd="-8dp">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/too_dirty" />


                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/harmful_to_self" />


                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/harmful_to_others" />


                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="1dp"
                    android:text="@string/harmful_to_wildlife" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/hard_to_pick_up" />


                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="1dp"
                    android:text="@string/other" />


            </RadioGroup>

        </RelativeLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>