<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_weight="1"
        android:text="@string/Hello"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/mu_logo"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_weight="1"
        android:cropToPadding="false"
        app:srcCompat="@drawable/mu_logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_weight="1"
        android:text="@string/b2" />

    <Button
        android:id="@+id/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/b3" />

</LinearLayout>
